--- a/index/04-Results.Rmd
+++ b/index/04-Results.Rmd
@@ -93,7 +93,7 @@ write_csv(
 )
 ```
 
-I estimate the non-asset-market uncertainty index following the quasi-maximum likelihood estimator of @dozgianreic:2012 as described in [Dynamic factor model], although alternative estimators are tested in [Robustness]. Moreover, I use one dynamic factor, one static factor and one lag in the specification of the model because I am looking for one single summary index that captures the common comovements of uncertainty, hence, one dynamic and static factor seems appropriate. This binds the lag order to one as the lag order can not be greater that the ratio between the number of static factors and the number of dynamic factors---$p \le \frac{r}{q}$ [@kililutk:2017].
+I estimate the non-asset-market uncertainty index following the quasi-maximum likelihood estimator of @dozetal:2012 as described in [Dynamic factor model], although alternative estimators are tested in [Robustness]. Moreover, I use one dynamic factor, one static factor and one lag in the specification of the model because I am looking for one single summary index that captures the common comovements of uncertainty, hence, one dynamic and static factor seems appropriate. This binds the lag order to one as the lag order can not be greater that the ratio between the number of static factors and the number of dynamic factors---$p \le \frac{r}{q}$ [@kililutk:2017].
 
 Although the goal is construct one economic index from the underlying series, it is worthy show all factors and its behavior. Each factor is associated with an eigenvalue of the correlation matrix of the the raw data. The first factor is associated with the largest eigenvalue, the second factor with the second-largest eigenvalue, and so on. A *scree plot* displays the marginal contribution---the average additional explanatory value of the kth factor---of the kth principal component to the average $R^{2}$ of the $N$ regressions of $X_{t}$ against the first k principal components. Essentially, the scree plot shows the ordered eigenvalues of $\hat{\sum}_{X}$ normalized by the sum of eigenvalues. The figure \@ref(fig:scree-plot) displays the scree plot where only the first factor is significant. Likewise, the plot shows a bend and only the first factor is above this sharp break (which suggest one factor following the scree test of @cattel:1966). In summary, a single component is appropriate for summarizing this dataset.
 
@@ -165,13 +165,13 @@ VAR_data %<>% inner_join(IP)
 
 In the Figure \@ref(fig:non-asset-market-uncertainty-index) is presented the non-asset-market index together with the recession dates in the United States as indicated by the National Bureau of Economic Research (NBER) on its website <https://www.nber.org/cycles.html>. Also, the 95th percentile of the series is presented as solid horizontal bar. The index peaks coincide with well known episodes of uncertainty in the economy as the Black Monday in October 1987, the bursting of the dot-com bubble and the Great Recession 2007--2009, although only the last has considerable impact.
 
-The index is clearly countercyclical, the cross-correlation with industrial production growth^[The industrial production growth is calculated as the 12-month moving average of monthly growth rates (in annualized percentage).] is $-0.69$. In the same period, the cross-correlation for the macroeconomic uncertainty index from @juraludvng:2015 is `r comma(cor(VAR_data[["moving_growth_production_all"]], VAR_data[["MU_JLN_h1"]]))`. The latter shows that the new index has less pronounced peaks around the recession dates of the economy, which is more appealing to a continually level of uncertainty in the economy.
+The index is clearly countercyclical, the cross-correlation with industrial production growth^[The industrial production growth is calculated as the 12-month moving average of monthly growth rates (in annualized percentage).] is $-0.69$. In the same period, the cross-correlation for the macroeconomic uncertainty index from @juraetal:2015 is `r comma(cor(VAR_data[["moving_growth_production_all"]], VAR_data[["MU_JLN_h1"]]))`. The latter shows that the new index has less pronounced peaks around the recession dates of the economy, which is more appealing to a continually level of uncertainty in the economy.
 
 In Table \@ref(tab:summary-table) I report descriptive statistics for the non-asset-market uncertainty index. The skewness, kurtosis, persistence and half-life for the full sample and for two sub-samples are presented (January 1985 to July 2007 and August 2007 to August 2017). This break date was chosen after testing for a break at an unknown date in the autoregressive model of the shocks persistence---AR(1) with drift. The basic idea is to calculate an $F$ statistic---often called Chow statistic, named for its inventor, Gregory Chow [-@chow:1960]---for each conceivable breakpoint in the interval $\tau_{0} = 0.15T$ and $\tau_{1} = 0.85T$, where $T$ is the total number of observations, and reject the null hypothesis of structural stability if the largest of the resulting $F$ statistics exceeds a certain critical value^[That is to say, an $F$ statistic is computed for each potential breakpoint between 1989:M11 and 2012:M9 testing the hypothesis that the coefficients are constant against the alternative that they have different values before and after the breakpoint, omitting the leading and trailing 15 \% of observations.] [@andrews:2003]. This modified Chow test is variously called the Quand Likelihood Ratio (QLR) statistic [@quandt:1960]^[See @hansen:2001 for additional discussion of estimation and testing in the presence of discrete breaks. Also, see @perron:2006 for a general survey.]. Given that there is evidence of one structural change in the model is necessary dating that structural change. Bai and Perron [-@baiperr:1998;-@baiperr:2003]  established a general methodology for estimating breakpoints and their associated confidence intervals in OLS regression. Henceforth, the two periods are choose following this methodology.
 
 The summary statistics in Table  \@ref(tab:summary-table) for the full period are misleading. For the first period of the sample the persistence is less that for the second period, so the time before a shock halve the distance to the stationary mean is smaller. Moreover, the distribution of the uncertainty index is different in location and shape for each period: the first part is slightly asymmetric and it has fewer outliers while the second part has more values above that below the mean and it has several values far from the mean. Nevertheless, the similarity between both periods is substantial but the shock for the Great Recession in 2007--2009. The last result can be though as evidence in line with a level of uncertainty less volatile and extreme across the economy, which is in concordance with the lower correlation founded in the last paragraph with a proxy for business cycle---industrial production.
 
-The persistence of the non-asset-market uncertainty index in the second sample is greater, for example, than that of the macroeconomic uncertainty from @juraludvng:2015: `r comma(DescribeIndex(DFM_base[DFM_base[["Date"]] >= "2007-08-31", ][["NAM"]])[4])` months versus `r comma(DescribeIndex(uncertainty_indices[["MU_JLN_h1"]])[4])` months. This shows that the level of uncertainty is continual in the sample.
+The persistence of the non-asset-market uncertainty index in the second sample is greater, for example, than that of the macroeconomic uncertainty from @juraetal:2015: `r comma(DescribeIndex(DFM_base[DFM_base[["Date"]] >= "2007-08-31", ][["NAM"]])[4])` months versus `r comma(DescribeIndex(uncertainty_indices[["MU_JLN_h1"]])[4])` months. This shows that the level of uncertainty is continual in the sample.
 
 ```{r summary-table-raw}
 summary_table_raw <- tibble(
@@ -204,9 +204,9 @@ kable(
   add_header_above(c("", "Sample period" = 3))
 ```
 
-<!-- The second estimator used is the Two-Step developed by @dozgianreic:2011. This methods uses PCA estimates and runs them through Kalman filter. -->
+<!-- The second estimator used is the Two-Step developed by @dozetal:2011. This methods uses PCA estimates and runs them through Kalman filter. -->
 
-<!-- The third estimator used is the Quasi-Maximum Likelihood by @dozgianreic:2012. Similar to two-step estimator, however Kalman filtering procedure is iterated until Expectation-Maximization (EM) algorithm converges. -->
+<!-- The third estimator used is the Quasi-Maximum Likelihood by @dozetal:2012. Similar to two-step estimator, however Kalman filtering procedure is iterated until Expectation-Maximization (EM) algorithm converges. -->
 
 ## Correlation with Other Uncertainty Indices {#correlation-with-uncertainty-indices}
 
@@ -260,7 +260,7 @@ To interpret the Figure \@ref(fig:corr-plot), the color in each cell represents 
 
 ## Estimates on the Impact of Non-Asset-Market Uncertainty Shocks {#estimates-on-the-impact-of-non-asset-market-uncertainty-shocks}
 
-I explore the dynamic relationship between my uncertainty index and some variables from the United States' economy. For that purpose, I use a benchmark model well documented: the model proposed by @chrieichevan:2005---and used as a base in @chulguilurib:2017. First, the characterization of monetary policy is defined by:
+I explore the dynamic relationship between my uncertainty index and some variables from the United States' economy. For that purpose, I use a benchmark model well documented: the model proposed by @chrietal:2005---and used as a base in @chuletal:2017. First, the characterization of monetary policy is defined by:
 
 \begin{equation}
     R_{t} = f(\Omega_{t}) + \epsilon_{t} (\#eq:R)
@@ -277,7 +277,7 @@ Considering $Y_{t}$ as the set of variables to which the dynamic effect of an un
     \end{bmatrix}_{T \times N}'
 \end{equation}
 
-The vector $Y_{1t}$ is composed of the variables whose values at the moment $t$ are contained in $\Omega_{t}$ and it is assumed that they do not respond simultaneously to a monetary policy shock: production, employment, consumption, inflation, new orders, wages and labor. The vector $Y_{2t}$ consists of the values at the moment $t$ of all the other variables in $\Omega_{t}$, which simultaneously respond to a monetary policy shock: stock market index and M2. In the last position, I place my uncertainty index $U_{t}$---as do @juraludvng:2015, @bloom:2009, and @chulguilurib:2017^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. I estimate a VAR model with 12 fixed lags, as opposed to the four quarters used in @chrieichevan:2005 following the caveats of Leeb \& Pötscher [-@leebpots:2005;-@leebpots:2006], as discussed in [Lag order]. I recover the structural innovations by means of a Cholesky factorization of the variance-covariance matrix. Since depending on whether the variables react or not to other variables contemporaneously, the Cholesky decomposition implies a certain ordering, the estimation order from more exogenous to more endogenous is the same as of the Equation \@ref(eq:variables).
+The vector $Y_{1t}$ is composed of the variables whose values at the moment $t$ are contained in $\Omega_{t}$ and it is assumed that they do not respond simultaneously to a monetary policy shock: production, employment, consumption, inflation, new orders, wages and labor. The vector $Y_{2t}$ consists of the values at the moment $t$ of all the other variables in $\Omega_{t}$, which simultaneously respond to a monetary policy shock: stock market index and M2. In the last position, I place my uncertainty index $U_{t}$---as do @juraetal:2015, @bloom:2009, and @chuletal:2017^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. I estimate a VAR model with 12 fixed lags, as opposed to the four quarters used in @chrietal:2005 following the caveats of Leeb \& Pötscher [-@leebpots:2005;-@leebpots:2006], as discussed in [Lag order]. I recover the structural innovations by means of a Cholesky factorization of the variance-covariance matrix. Since depending on whether the variables react or not to other variables contemporaneously, the Cholesky decomposition implies a certain ordering, the estimation order from more exogenous to more endogenous is the same as of the Equation \@ref(eq:variables).
 
 The VAR model with constant term ignored can be written as follows:
 
@@ -392,11 +392,11 @@ matrix_irf %>%
     theme(strip.text = element_text(size = rel(1.25)))
 ```
 
-Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series does not stabilize at a lower level as reported in @chulguilurib:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect proposed in @chulguilurib:2017 for New Orders.
+Production reacts negatively to an uncertainty shock and the persistence last until the second year. Likewise, employment decreases following a uncertainty shock and the impact persists for the same time that production (two years). In contrast, new orders reacts negatively faster and last for only one year after which its becomes zero. Consumption reacts slowly to the uncertainty shock, this decreases after one year and maintain its behavior for two years and a half (that is, six months more than production, employment and new orders). The stock market index is severely affected and his persistence last for the same period that the variables discussed so far. Although, the series does not stabilize at a lower level as reported in @chuletal:2017. In addition, the federal funds rate also seems sensitive to an uncertainty shock. Specifically, the Federal reserve reduce the interest rate---which is significant for the first year---that shows that the reduction in the stock market index is due to uncertainty and not to movements in the interest rate. Finally, I don't find any evidence of the *rebound* effect evidenced in @bloom:2009 for production neither the *rebound* effect proposed in @chuletal:2017 for New Orders.
 
 The Figure \@ref(fig:fevd-plot) shows the forecast error variance decomposition (FEVD) which allows to analyze the contribution of each variable to the $h$-step forecast error variance of all other variables. Accordingly, the forecast error of the production series is explained by uncertainty six months after the innovation in 10 \%, twelve months after in 25 \%  and twenty-four months after in 30 \%. For employment, uncertainty accounts for 10 \% twelve months after the original structural innovation and 20 \% two years later. For new orders, the uncertainty accounts for 15 \% of the variance six months on and then stabilize in 10 \%. For consumption, the uncertainty accounts for less that 5 \% in the first twelve months but after for 15 \% of the variance. For the financial prices---stock market index---, the uncertainty accounts for the same amount as consumption, i.e., starts in 5 \% and then its stabilizes in 15 \%. Finally, the forecast error of federal funds rate is explained by uncertainty between the 5 \% and 10 \%. These results confirm the importance of uncertainty as a driver of the economy's dynamics.
 
-One important question to resolver is if monetary policy interventions have effect on uncertainty. The Figure \@ref(fig:fevd-plot) shows the reaction of uncertainty to an unexpected loosening of monetary policy; it can be see that there not a significant effect. That is to say, an expansionary monetary policy does not have sizable impact on uncertainty. In the same way, the forecast error of the uncertainty series is minimally explained by an uncertainty shock (see Figure \@ref(fig:R-fevd-plot)). These findings are contrary to the documented in @bekahoerduca:2013 and @chulguilurib:2017, which reports significant effects, and add to the research field by exploring the relationship between policy intervention and uncertainty.
+One important question to resolver is if monetary policy interventions have effect on uncertainty. The Figure \@ref(fig:fevd-plot) shows the reaction of uncertainty to an unexpected loosening of monetary policy; it can be see that there not a significant effect. That is to say, an expansionary monetary policy does not have sizable impact on uncertainty. In the same way, the forecast error of the uncertainty series is minimally explained by an uncertainty shock (see Figure \@ref(fig:R-fevd-plot)). These findings are contrary to the documented in @bekaetal:2013 and @chuletal:2017, which reports significant effects, and add to the research field by exploring the relationship between policy intervention and uncertainty.
 
 ```{r fevd, warning = FALSE, message = FALSE}
 fevd_baseline <- fevd(VAR_baseline, 60)
@@ -751,17 +751,17 @@ kable(
 
 ## Robustness {#robustness}
 
-I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty index. I estimate the uncertainty index using PCA [@stocwats:2002] and PCA estimates runs through Kalman ﬁlter---two-step [@dozgianreic:2011]---instead of quasi-maximum likelihood [@dozgianreic:2012]. The results are summarized in Figure \@ref(fig:robustness-methods). In general, the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
+I perform several robustness exercises varying the econometric methodology employed to create the non-asset-market uncertainty index. I estimate the uncertainty index using PCA [@stocwats:2002] and PCA estimates runs through Kalman ﬁlter---two-step [@dozetal:2011]---instead of quasi-maximum likelihood [@dozetal:2012]. The results are summarized in Figure \@ref(fig:robustness-methods). In general, the uncertainty index behaves in a very similar fashion, regardless of the factor methodology used to summarize the components of the series.
 
 In the same way, I employ different variable sets and orderings in the VAR estimated in [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks]. First, I change the sector of the variables to the manufacturing sector with eight variables following @bloom:2009. The variables in the estimation order are production in manufacturing, employment in manufacturing, labor in manufacturing, inflation (based on all urban consumers), wages in manufacturing, federal funds rate, stock-market index and non-asset-market uncertainty^[See [Data] for a detailed description of the series used in this section as the transformations made to them.]. The ordering is based on the assumptions that shocks instantaneously influence the stock market, then prices (wages, inflation, and interest rates), and finally quantities (labor, employment, and output). All variables are Hamilton detrended with a look-ahead period of two years ($h = 24$), as explained in [Detrend].
 
-Figure \@ref(fig:production-medium) plots the impulse response function of industrial production in manufacturing (the dashed line) to a non-asset-market uncertainty shock. The variable displays a fall of around 0.85 \% within 15 months. The confidence bands (shaded area) are plotted around this, highlighting that this drop is statistically significant. For comparison to a first-moment shock, the response to a impulse to the federal funds rate is also plotted (dotted line) displaying a minor drop over the subsequent 2 years^[The response to a fall the stock-market (not plotted) is similar in size and magnitude to the response to a rise in the federal funds rate.]. Figure \@ref(fig:employment-medium) repeats the same exercise for employment, displaying a similar drop in activity. These findings are evidence that the overshoot observed by @bloom:2009 is sensitive to whether the data are HP filtered---as claims @juraludvng:2015---because this document uses the Hamilton filter but the same data.
+Figure \@ref(fig:production-medium) plots the impulse response function of industrial production in manufacturing (the dashed line) to a non-asset-market uncertainty shock. The variable displays a fall of around 0.85 \% within 15 months. The confidence bands (shaded area) are plotted around this, highlighting that this drop is statistically significant. For comparison to a first-moment shock, the response to a impulse to the federal funds rate is also plotted (dotted line) displaying a minor drop over the subsequent 2 years^[The response to a fall the stock-market (not plotted) is similar in size and magnitude to the response to a rise in the federal funds rate.]. Figure \@ref(fig:employment-medium) repeats the same exercise for employment, displaying a similar drop in activity. These findings are evidence that the overshoot observed by @bloom:2009 is sensitive to whether the data are HP filtered---as claims @juraetal:2015---because this document uses the Hamilton filter but the same data.
 
 In Figure \@ref(fig:robustness), the VAR results are show to be robust to a variety of alternative variables sets and orderings. The VAR is reestimated using a simple trivariate VAR (production in manufacturing, employment in manufacturing and non-asset-market uncertainty only) which also display a drop (dashed line). The "quadvariate" VAR (production in manufacturing, employment in manufacturing, stock-market index and non-asset-market uncertainty only) also displays a similar drop (solid line), as does the quadvariate VAR with the variable ordering reversed (dotted line). Therefore, the response of production to an uncertainty shock appears robust to both the basic selection and the ordering of variables.
 
 Henceforth, Figures \@ref(fig:robustness-methods), \@ref(fig:production-medium), \@ref(fig:employment-medium) and \@ref(fig:robustness) confirm the robustness of the DFM to the methodology used and of VAR results to a range of alternative approaches over variable ordering and variable inclusion.
 
-(ref:robustness-methods) **Robustness to Estimation Method**: The figure shows the comparison between the non-asset-market uncertainty index using quasi-maximum likelihood [@dozgianreic:2012], principal components [@stocwats:2002] and two-step [@dozgianreic:2011]. All the indices have been standardized to make proper comparisons.
+(ref:robustness-methods) **Robustness to Estimation Method**: The figure shows the comparison between the non-asset-market uncertainty index using quasi-maximum likelihood [@dozetal:2012], principal components [@stocwats:2002] and two-step [@dozetal:2011]. All the indices have been standardized to make proper comparisons.
 
 ```{r robustness-methods, fig.cap = "(ref:robustness-methods)", fig.scap = "Robustness to Estimation Method"}
 DFM_base %>% 
