--- a/index/bib/thesis.bib
+++ b/index/bib/thesis.bib
@@ -1,14 +1,3 @@
-@Article{haytallescar:2004,
-    Author  = {James C.~Hayton and David G.~Allen and Vida Scarpello},
-    Title   = {Factor Retention Decisions in Exploratory Factor Analysis: A Tutorial on Parallel Analysis},
-    Year    = {2004},
-    Journal = {Organizational Research Methods},
-    Volume  = {7},
-    Number  = {2},
-  	Pages   = {191--205},
-  	DOI     = {10.1177/1094428104263675}
-}
-
 @Article{hamilton:2018,
     Author  = {James D.~Hamilton},
     Title   = {Why You Should Never Use the {Hodrick-Prescott} Filter},
@@ -25,7 +14,7 @@
     Title     = {An Introduction to the Bootstrap},
     Publisher = {Chapman \& Hall/CRC},
     Year      = {1993},
-    Address   = {Boca Raton, Florida}
+    Address   = {Boca Raton, FL}
 }
 
 @Article{bloom:2009,
@@ -39,7 +28,7 @@
     DOI     = {10.3982/ECTA6248}
 }
 
-@Article{bakebloodavi:2016,
+@Article{bakeetal:2016,
     Author  = {Scott R.~Baker and Nicholas Bloom and Steven J.~Davis},
     Title   = {Measuring Economic Policy Uncertainty},
     Year    = {2016},
@@ -61,7 +50,7 @@
     DOI     = {10.1198/016214502388618960}
 }
 
-@Article{dozgianreic:2011,
+@Article{dozetal:2011,
     Author  = {Catherine Doz and Domenico Giannone and Lucrezia Reichlin},
     Title   = {A Two-Step Estimator for Large Approximate Dynamic Factor Models Based on {Kalman} Filtering},
     Year    = {2011},
@@ -72,7 +61,7 @@
     DOI     = {10.1016/j.jeconom.2011.02.012}
 }
 
-@Article{dozgianreic:2012,
+@Article{dozetal:2012,
     Author  = {Catherine Doz and Domenico Giannone and Lucrezia Reichlin},
     Title   = {A Quasi–Maximum Likelihood Approach for Large, Approximate Dynamic Factor Models},
     Year    = {2012},
@@ -83,7 +72,7 @@
     DOI     = {10.1162/REST_a_00225}
 }
 
-@Article{hustrogesun:2019,
+@Article{hustetal:2019,
     Author   = {Lucas Husted and John Rogers and Bo Sun},
     Title    = {Monetary policy uncertainty},
     Year     = {2019},
@@ -99,28 +88,28 @@
     Institution = {Board of Governors of the Federal Reserve System {(U.S.)}},
     Type        = {International Finance Discussion Papers},
     Number      = {1222},
-    DOI         = {10.17016/IFDP.2018.1222}
+    URL         = {https://www.federalreserve.gov/econres/ifdp/files/ifdp1222.pdf}
 }
 
-@Techreport{dattlondsunbeltferriacojahaligiudroge:2017,
+@Techreport{dattetal:2017,
     Author      = {Deepa Dhume Datta and Juan M.~Londono and Bo Sun and Daniel O.~Beltran and Thiago Revil T.~Ferreira and Matteo Iacoviello and Mohammad Jahan-Parvar and Canlin Li and Marius del Giudice Rodriguez and John H.~Rogers},
     Title       = {Taxonomy of Global Risk, Uncertainty, and Volatility Measures},
     Year        = {2017},
     Institution = {Board of Governors of the Federal Reserve System {(U.S.)}},
     Type        = {International Finance Discussion Papers},
     Number      = {1216},
-    DOI         = {10.17016/IFDP.2017.1216}
+    URL         = {https://www.federalreserve.gov/econres/ifdp/files/ifdp1216.pdf}
 }
 
-@Article{juraludvng:2015,
-  Author  = {Kyle Jurado and Sydney C.~Ludvigson and Serena Ng},
-  Title   = {Measuring Uncertainty},
-  Year    = {2015},
-  Journal = {American Economic Review},
-  Volume  = {105},
-  Number  = {3},
-  Pages   = {1177--1216},
-  DOI     = {10.1257/aer.20131193}
+@Article{juraetal:2015,
+    Author  = {Kyle Jurado and Sydney C.~Ludvigson and Serena Ng},
+    Title   = {Measuring Uncertainty},
+    Year    = {2015},
+    Journal = {American Economic Review},
+    Volume  = {105},
+    Number  = {3},
+    Pages   = {1177--1216},
+    DOI     = {10.1257/aer.20131193}
 }
 
 @Book{kililutk:2017, 
@@ -128,7 +117,7 @@
     Title     = {Structural Vector Autoregressive Analysis},
     Publisher = {Cambridge University Press},
     Year      = {2017},
-    Address   = {Cambridge}
+    Address   = {Cambridge, United Kingdom}
 }
 
 @Article{gonzpita:2002,
@@ -217,7 +206,7 @@
     Editor    = {John Taylor and Harald Uhlig},
     Volume    = {2A},
     Pages     = {415--525},
-    Address   = {Amsterdam}
+    Address   = {Amsterdam, Netherlands}
 }
 
 @Article{baing:2002,
@@ -242,7 +231,7 @@
     DOI     = {10.1257/jep.15.4.101}
 }
 
-@Article{chrieichevan:2005,
+@Article{chrietal:2005,
     Author  = {Lawrence J.~Christiano and Martin Eichenbaum and Charles L.~Evans},
     Title   = {Nominal Rigidities and the Dynamic Effects of a Shock to Monetary Policy},
     Year    = {2005},
@@ -253,9 +242,9 @@
     DOI     = {10.1086/426038}
 }
 
-@Article{chulguilurib:2017,
+@Article{chuletal:2017,
     Author  = {Helena Chuliá and Montserrat Guillén and Jorge M.~Uribe},
-    Title   = {Measuring uncertainty in the stock market},
+    Title   = {Measuring Uncertainty in the Stock Market},
     Year    = {2017},
     Journal = {International Review of Economics \& Finance},
     Volume  = {48},
@@ -263,7 +252,7 @@
     DOI     = {10.1016/j.iref.2016.11.003}
 }
 
-@Article{britfishwhit:1998,
+@Article{britetal:1998,
     Author  = {Edward D.~Britton and Paul B.~Fisher and John Whitley},
     Title   = {The Inflation Report Projections: Understanding the Fan Chart},
     Year    = {1998},
@@ -295,7 +284,7 @@
     DOI     = {10.1257/jep.15.4.117}
 }
 
-@Article{gianreicsmal:2008,
+@Article{gianetal:2008,
     Author  = {Domenico Giannone and Lucrezia Reichlin and David Small},
     Title   = {Nowcasting: The real-time informational content of macroeconomic data},
     Year    = {2008},
@@ -317,7 +306,7 @@
     DOI     = {10.1016/j.ijforecast.2010.01.011}
 }
 
-@Incollection{banbgianreic:2011,
+@Incollection{banbetal:2011,
     Author    = {Marta BańBura and Domenico Giannone and Lucrezia Reichlin},
     Title     = {Nowcasting},
     Booktitle = {Oxford Handbook on Economic Forecasting},
@@ -325,7 +314,7 @@
     Year      = {2011},
     Editor    = {Michael P.~Clements and David F.~Hendry},
     Pages     = {193--224},
-    Address   = {Oxford}
+    Address   = {Oxford, United Kingdom}
 }
 
 @Article{andrews:2003,
@@ -424,7 +413,7 @@
     Year      = {1991},
     Editor    = {G.~Moore and K.~Lahiri},
     Pages     = {63--90},
-    Address   = {Cambridge}
+    Address   = {Cambridge, United Kingdom}
 }
 
 @Inbook{stocwats:1993,
@@ -435,7 +424,7 @@
   	Year      = {1993},
   	Editor    = {James Stock and Mark W.~Watson},
   	Pages     = {95--156},
-  	Address   = {Chicago}
+  	Address   = {Chicago, IL}
 }
 
 @Article{cronclay:2005,
@@ -460,7 +449,7 @@
     DOI     = {10.1002/jae.695}
 }
 
-@Article{aruodiebscot:2009,
+@Article{aruoetal:2009,
     Author  = {S.~Borağan Aruoba and Francis X.~Diebold and Chiara Scotti},
     Title   = {Real-Time Measurement of Business Conditions},
     Year    = {2009},
@@ -482,7 +471,7 @@
     DOI     = {10.1016/S0304-3932(99)00027-6}
 }
 
-@Techreport{altibasscrisfornhalllippreicvero:2001,
+@Techreport{altietal:2001,
     Author      = {Filippo Altissimo and Antonio Bassanetti and Riccardo Cristadoro and Mario Forni and Marc Hallin and Marco Lippi and Lucrezia Reichlin and Giovanni Veronese},
     Title       = {{Eurocoin}: A Real Time Coincident Indicator of the Euro Area Business Cycle},
     Year        = {2001},
@@ -490,7 +479,7 @@
     Number      = {3108}
 }
 
-@Article{alticrisfornlippvero:2010,
+@Article{altietal:2010,
     Author  = {Filippo Altissimo and Riccardo Cristadoro and Mario Forni and Marco Lippi and Giovanni Veronese},
     Title   = {New {Eurocoin}: Tracking Economic Growth in Real Time},
     Year    = {2010},
@@ -518,7 +507,7 @@
     Title     = {New Introduction to Multiple Time Series Analysis},
     Publisher = {Springer-Verlag},
     Year      = {2005},
-    Address   = {Berlin}
+    Address   = {Berlin, Germany}
 }
 
 @Article{friendly:2002,
@@ -561,15 +550,15 @@
   	Editor    = {H.~Hassani and Terence C.~Mills and Kerry Patterson},
   	Volume    = {1: Econometric Theory},
   	Pages     = {278--352},
-  	Address   = {London}
+  	Address   = {London, United Kingdom}
 }
 
-@Book{knight:2014, 
+@Book{knight:1921, 
     Author    = {Frank H.~Knight},
     Title     = {Risk, Uncertainty and Profit},
-    Publisher = {Martino Fine Books},
-    Year      = {2014},
-    Address   = {Eastford}
+    Publisher = {Houghton Mifflin Company},
+    Year      = {1921},
+    Address   = {Boston, MA}
 }
 
 @Book{bernstein:1998, 
@@ -588,7 +577,7 @@
     Address   = {New York, NY}
 }
 
-@Book{diebdoheherr:2010, 
+@Book{diebetal:2010, 
     Author    = {Francis X.~Diebold and Neil A.~Doherty and Richard J.~Herring},
     Title     = {The Known, the Unknown, and the Unknowable in Financial Risk Management: Measurement and Theory Advancing Practice},
     Publisher = {Princeton University Press},
@@ -596,7 +585,7 @@
     Address   = {New York, NY}
 }
 
-@Article{chrimottrost:2014,
+@Article{chrietal:2014,
     Author  = {Lawrence J.~Christiano and Roberto Motto and  Massimo Rostagno},
     Title   = {Risk Shocks},
     Year    = {2014},
@@ -607,7 +596,7 @@
     DOI     = {10.1257/aer.104.1.27}
 }
 
-@Article{bekahoerduca:2013,
+@Article{bekaetal:2013,
     Author  = {Geert Bekaert and Marie Hoerova and Marco Lo Duca},
     Title   = {Risk, Uncertainty and Monetary Policy},
     Year    = {2013},
@@ -618,7 +607,7 @@
     DOI     = {10.1016/j.jmoneco.2013.06.003}
 }
 
-@Article{bloofloejaimsapoterr:2018,
+@Article{blooetal:2018,
     Author  = {Nicholas Bloom and Max Floetotto and Nir Jaimovich and Itay Saporta-Eksten and Stephen J.~Terry},
     Title   = {Really Uncertain Business Cycles},
     Year    = {2018},
@@ -639,7 +628,7 @@
     DOI     = {10.1016/j.jmoneco.2016.06.002}
 }
 
-@Techreport{ludvmang:2015,
+@Techreport{ludvetal:2015,
     Title       = {Uncertainty and Business Cycles: Exogenous Impulse or Endogenous Response?},
     Author      = {Sydney C.~Ludvigson and Sai Ma and Serena Ng},
     Institution = {National Bureau of Economic Research {(NBER)}},
