--- a/index/03-Data.Rmd
+++ b/index/03-Data.Rmd
@@ -4,12 +4,12 @@ In this section I show the sources used for retrieve the data necessary for the 
 
 ## Sources {#sources}
 
-For the construction of the non-asset-market uncertainty index I use uncertainty indices from distinct sources for the U.S. economy. Specifically, the indices are (following the order proposed in @dattlondsunbeltferriacojahaligiudroge:2017, as discussed in [Empirical Measures of Uncertainty]):
+For the construction of the non-asset-market uncertainty index I use uncertainty indices from distinct sources for the U.S. economy. Specifically, the indices are (following the order proposed in @dattetal:2017, as discussed in [Empirical Measures of Uncertainty]):
 
-- The two variants of economic policy uncertainty index and the two variants of monetary policy uncertainty index from @bakebloodavi:2016. These indices are available from January 1985 through September 2019 in the authors website <https://www.policyuncertainty.com>.
-- The monetary policy uncertainty Index developed by @hustrogesun:2019. This index is available from January 1985 through July 2017 in the website <https://www.policyuncertainty.com>.
+- The two variants of economic policy uncertainty index and the two variants of monetary policy uncertainty index from @bakeetal:2016. These indices are available from January 1985 through September 2019 in the authors website <https://www.policyuncertainty.com>.
+- The monetary policy uncertainty Index developed by @hustetal:2019. This index is available from January 1985 through July 2017 in the website <https://www.policyuncertainty.com>.
 - The indices of geopolitical risk developed by @caldiaco:2018. Specifically, the benchmark geopolitical risk index, the geopolitical acts index and the geopolitical threats index. These indices are available from January 1985 through November 2019 in the website <https://www.policyuncertainty.com>.
-- The macroeconomic, financial and real uncertainty indices developed by @juraludvng:2015 and @ludvmang:2015 at all horizons. These indices are available from July 1960 through June 2019 in one of the authors website <https://www.sydneyludvigson.com/data-and-appendixes>.
+- The macroeconomic, financial and real uncertainty indices developed by @juraetal:2015 and @ludvetal:2015 at all horizons. These indices are available from July 1960 through June 2019 in one of the authors website <https://www.sydneyludvigson.com/data-and-appendixes>.
 
 In [Estimates on the Impact of Non-Asset-Market Uncertainty Shocks] I estimate several VAR models. The data for these exercises were taken from the Federal Reserve Bank of Saint Louis (FRED: <https://fred.stlouisfed.org/>), Yahoo Finance (<https://finance.yahoo.com/>) and Quandl (<https://www.quandl.com/>) webpages through the API of each of them. Specifically, for the eleven-variable VAR I use the industrial production index in 2012 prices; the total number of employees in the non-farm sector in thousand of persons; real personal consumption expenditures in 2012 prices; the personal consumption expenditures price index in 2012 prices; the average hourly earnings of production and non-supervisory employees for all-sectors in dollars per hour; average weekly hours of production and non-supervisory employees for all-sectors in hours; effective federal funds rate in percent and M2 money stock in billions of dollars from FRED. Likewise, I use the new order index from Quandl and the Standard and Poor's 500 index from Yahoo Finance. 
 
